# libcxlmi

./: LICENSE  Makefile  README.md  TODO  meson.build  meson_options.txt
.github/workflows/: abi.yml  analysis.yml  build.yml  coverity.yml  run-tests.yml  spelling.yml  test.yml
ccan/: meson.build
ccan/ccan/endian/: endian.h
ccan/ccan/minmax/: minmax.h
docs/: FM-API.md  Generic-Component-Commands.md  How-To-Add-A-Command.md  Memory-Device-Commands.md  Python.md  Supported-Commands.md  Testing.md  Vendor-Specific-Commands.md
examples/: cxl-ioctl.c  cxl-mctp.c  examples.h  fmapi-mctp.c  meson.build
examples/python/: README.md  fmapi_get_dc_region_extent_list.py  fmapi_switch_info.py  get_health_info.py  get_partition_info.py  identify_device.py  input_commands.py  list_endpoints_mctp.py  meson.build  tunnel_example.py
scripts/: qemu-cxl-test.sh  qemu-init.c  qemu-mctp-test.sh
src/: cxlmi.i  libcxlmi.h  meson.build
src/cxlmi/: api-types.h  commands.c  cxlmi.c  log.c  log.h  mock.c  mock.h  private.h  test.h
src/python/: meson.build  requirements.txt  setup.py
tests/: README.md  api-simple-tests.c  cxl-test-fmapi.c  cxl-test-generic.c  cxl-test-memdev.c  generate_tests.py  meson.build  meson.build.rej  mock-tests.c  run_tests.py  suites.py  test-common.h
tests/input/: fmapi-commands.xml  generic-commands.xml
tests/python/: meson.build  test_cxlmi.py
tests/qemu-tests/: README.md  generate_tests.py  meson.build  parse_docs.py  run_tests.py  suites.py  topo.py
tests/qemu-tests/inputs/: fmapi-commands.xml  generic-commands.xml  mailbox-commands.xml  mctp-commands.xml
