# SPDX-License-Identifier: LGPL-2.1-or-later
#
# This file is part of libcxlmi.
#
executable(
    'cxl-mctp',
    ['cxl-mctp.c'],
    dependencies: libcxlmi_dep,
    include_directories: [inc]
)

executable(
    'cxl-ioctl',
    ['cxl-ioctl.c'],
    dependencies: libcxlmi_dep,
    include_directories: [inc]
)

executable(
    'fmapi-mctp',
    ['fmapi-mctp.c'],
    dependencies: libcxlmi_dep,
    include_directories: [inc]
)